SalesmanAlgoTwo: optimised memory usage